@@ -56,6 +56,7 @@
 #include <stdlib.h>
 #include <math.h>
 
+#include <QApplication>
 #include <QDomDocument>
 
 
@@ -651,10 +652,22 @@ bool synthv1_lv2::patch_put ( uint32_t ndelta, uint32_t type )
 // synthv1_lv2 - LV2 desc.
 //
 
+static QApplication *synthv1_lv2_qapp_instance = nullptr;
+static unsigned int  synthv1_lv2_qapp_refcount = 0;
+
 static LV2_Handle synthv1_lv2_instantiate (
 	const LV2_Descriptor *, double sample_rate, const char *,
 	const LV2_Feature *const *host_features )
 {
+	if (qApp == nullptr && synthv1_lv2_qapp_instance == nullptr) {
+		static int s_argc = 1;
+		static const char *s_argv[] = { __func__, nullptr };
+		synthv1_lv2_qapp_instance = new QApplication(s_argc, (char **) s_argv);
+	}
+
+	if (synthv1_lv2_qapp_instance)
+		synthv1_lv2_qapp_refcount++;
+
 	return new synthv1_lv2(sample_rate, host_features);
 }
 
@@ -697,6 +710,11 @@ static void synthv1_lv2_cleanup ( LV2_Handle instance )
 	synthv1_lv2 *pPlugin = static_cast<synthv1_lv2 *> (instance);
 	if (pPlugin)
 		delete pPlugin;
+
+	if (synthv1_lv2_qapp_instance && --synthv1_lv2_qapp_refcount == 0) {
+		delete synthv1_lv2_qapp_instance;
+		synthv1_lv2_qapp_instance = nullptr;
+	}
 }
 
 
